# gekkofs_fuse

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
bbfs/: .gitignore  CMakeLists.txt
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt  conf.py.in  index.rst
docs/sphinx/_templates/: footer.html  layout.html
docs/sphinx/devs/: coverage.md  docs.rst  testing.md
docs/sphinx/users/: building.rst  dependencies.rst  forwarding.rst  overview.rst  running.md  running.rst  scripts.rst
examples/gfind/: CMakeLists.txt  gfind.cpp  pfind.sh  sfind.cpp
fs/: .gitignore  CMakeLists.txt
fs/src/: bbfs.c  bbfs.h  configure.h  dentry_ops.cpp  dentry_ops.h  fuse_ops.h  fuse_utils.h  main.cpp  main.h  metadata.cpp  metadata.h  metadata_ops.cpp  metadata_ops.h  util.cpp
fs/src/adafs_ops/: access.cpp  access.h  dentry_ops.cpp  dentry_ops.h  metadata_ops.cpp  metadata_ops.h
fs/src/classes/: metadata.cpp  metadata.h
fs/src/fuse_ops/: access.cpp  directory.cpp  file.cpp  io.cpp  permission.cpp  sync.cpp
ifs/: CMakeLists.txt  LICENSE  README.md  configure.hpp  configure_public.hpp  main.cpp  main.hpp  util.cpp
ifs/CMake/: FindAbt-IO.cmake  FindAbt-Snoozer.cmake  FindAbt.cmake  FindAbtIO.cmake  FindBMI.cmake  FindCCI.cmake  FindGFlags.cmake  FindJeMalloc.cmake  FindLZ4.cmake  FindLibFabric.cmake  FindLibev.cmake  FindMargo.cmake  FindMercury.cmake  FindMercuryUtil.cmake  FindRocksDB.cmake  FindSnappy.cmake  FindZStd.cmake  Findsnappy.cmake
ifs/include/: configure.hpp  global_defs.hpp
ifs/include/adafs_ops/: data.hpp  metadentry.hpp
ifs/include/classes/: fs_data.hpp  metadata.hpp  rpc_data.hpp
ifs/include/daemon/: adafs_daemon.hpp  fs_operations.hpp
ifs/include/db/: db_ops.hpp  db_util.hpp
ifs/include/fuse3/: fuse_main.hpp  fuse_ops.hpp  fuse_util.hpp
ifs/include/global/: blocks_calc_util.hpp  chunk_calc_util.hpp  configure.hpp  global_defs.hpp  log_util.hpp  metadata.hpp  path_util.hpp
ifs/include/preload/: adafs_functions.hpp  intcp_functions.hpp  ipc_types.hpp  margo_ipc.hpp  open_dir.hpp  open_file_map.hpp  passthrough.hpp  preload.hpp  preload_context.hpp  preload_util.hpp  resolve.hpp
ifs/include/rpc/: rpc_defs.hpp  rpc_types.hpp  rpc_utils.hpp
ifs/scripts/: clone_all.sh  clone_dep.sh  compile_all.sh  compile_dep.sh  dl_dep.sh  launch_adafs.py  margo_0.2_multiple_clients.patch  shutdown_adafs.py  startup_adafs.py
ifs/scripts/eval/: ior_to_csv.py  mdtest_to_csv.py
ifs/scripts/patches/: abt_io_cplusplus_template_clash.patch  cci_hang_final.patch  cci_remove_devel_mode.patch  margo_allow_init_options.patch  mercury_cci_verbs_lookup.patch
ifs/scripts/slurm/: mogon1_ior_ramdisk.sh  mogon1_mdtest_ramdisk.sh  mogon2_ior_ssd.sh  mogon2_mdtest.sh  mogon2_mdtest_ssd.sh
ifs/scripts/util/: util.py
ifs/src/adafs_ops/: data.cpp  metadentry.cpp
ifs/src/classes/: fs_data.cpp  metadata.cpp  rpc_data.cpp
ifs/src/daemon/: CMakeLists.txt  adafs_daemon.cpp  fs_operations.cpp
ifs/src/db/: db_ops.cpp  db_util.cpp
ifs/src/fuse3/: CMakeLists.txt  fuse_main.cpp  fuse_util.cpp
ifs/src/global/: CMakeLists.txt  global_func.cpp  log_util.cpp  metadata.cpp  path_util.cpp
ifs/src/preload/: CMakeLists.txt  adafs_functions.cpp  functions.cpp  (+9 more)
ifs/test/: benchmark_check.sh
ifs_test/: CMakeLists.txt  dir_test.cpp  main.cpp  main_IO_testing.cpp  main_MPI.cpp  main_temp.cpp  main_temp_testing.cpp  wr_test.cpp
include/: CMakeLists.txt  config.hpp  version.hpp.in
include/client/: CMakeLists.txt  adafs_functions.hpp  env.hpp  gkfs_functions.hpp  hooks.hpp  intcp_functions.hpp  intercept.hpp  logging.hpp  make_array.hpp  open_dir.hpp  open_file_map.hpp  passthrough.hpp  path.hpp  preload.hpp  preload_context.hpp  preload_util.hpp  resolve.hpp  syscalls.hpp
include/common/: CMakeLists.txt  cmake_configure.hpp.in  common_defs.hpp  env_util.hpp  log_util.hpp  metadata.hpp  path_util.hpp
include/daemon/: CMakeLists.txt  adafs_daemon.hpp  daemon.hpp  env.hpp  main.hpp  util.hpp
include/global/: chunk_calc_util.hpp  cmake_configure.hpp.in  configure.hpp  configure.hpp.in  env_util.hpp  global_defs.hpp  global_func.hpp  log_util.hpp  metadata.hpp  path_util.hpp
include/preload/: intcp_functions.hpp  preload.hpp
lfs/: .gitignore  CMakeLists.txt  cci.conf  compile_all.sh
lfs/CMake/: FindAbt-Snoozer.cmake  FindAbt.cmake  FindAbtIO.cmake  FindCCI.cmake  FindFUSE3.cmake  FindLibev.cmake  FindMargo.cmake  FindMercury.cmake  FindMercuryUtil.cmake  FindRocksDB.cmake  FindZStd.cmake
lfs/src/: cci.conf  configure.h  configure.hpp  fuse_ops.h  fuse_ops.hpp  main.cpp  main.h  main.hpp  util.cpp
src/client/: CMakeLists.txt  adafs_functions.cpp  gkfs_functions.cpp  hooks.cpp  intcp_functions.cpp  intercept.cpp  logging.cpp  open_dir.cpp  open_file_map.cpp  passthrough.cpp  path.cpp  preload.cpp  preload_context.cpp  preload_util.cpp  resolve.cpp
src/common/: CMakeLists.txt  env_util.cpp  log_util.cpp  metadata.cpp  path_util.cpp
src/daemon/: CMakeLists.txt  adafs_daemon.cpp  daemon.cpp  main.cpp  util.cpp
src/global/: CMakeLists.txt  env_util.cpp  global_func.cpp  log_util.cpp  metadata.cpp  path_util.cpp
stackfs_lowlevel/: CMakeLists.txt  main.c
test/: CMakeLists.txt  IO_test.cpp  dir_test.cpp  lseek.cpp  main.cpp  main_IO_testing.cpp  main_MPI.cpp  main_temp.cpp  symlink_test.cpp  truncate.cpp  wr_test.cpp
tests/: CMakeLists.txt  addoptions.py.in  conftest.py  conftest.py.in  pytest.ini.in  pytest.install.ini.in  requirements.txt.in  test_directories.py
tests/directories/: test_directories.py
tests/harness/: CMakeLists.txt  cli.py  gkfs.py  harness.py  io.py  logger.py  reporter.py  workspace.py
tests/integration/: CMakeLists.txt  conftest.py  pytest.ini.in  pytest.install.ini.in  requirements.txt.in
tests/shell/: test_cp.py  test_stat.py
tests/unit/: CMakeLists.txt  catch_main.cpp  test_example_00.cpp  test_example_01.cpp  test_guided_distributor.cpp  test_helpers.cpp  test_util_numeric.cpp  test_utils_arithmetic.cpp
(+592 files in other folders)
